unpackaged/main/default/objects/Tax_Ops_Task__c/Tax_Ops_Task__c.object-meta.xml
<CustomObject>
    <label>Tax Ops Task</label>
    <nameField>
        <displayFormat>Tx-{0000000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Ops Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>