unpackaged/main/default/objects/Tax_Ops_Task__c/fields/Agency_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Agency_Phone_Number__c</fullName>
    <formula>Agency_Information__r.Main_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Phone Number</label>
    <type>Text</type>
</CustomField>