unpackaged/main/default/objects/Tax_Ops_Task__c/fields/CSV_File_Processing__c.field-meta.xml
<CustomField>
    <fullName>CSV_File_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSV File Processing</label>
    <type>Checkbox</type>
</CustomField>