unpackaged/main/default/objects/Tax_Ops_Task__c/fields/Duplicate_Failed_Records__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Failed_Records__c</fullName>
    <label>Duplicate Failed Records</label>
    <summaryFilterItems>
        <field>Tax_Ops_Failed_Record__c.isDuplicate__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Tax_Ops_Failed_Record__c.Tax_Ops_Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>