unpackaged/main/default/objects/Tax_Ops_Task__c/fields/Failed_Amount_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Failed_Amount_of_Payments__c</fullName>
    <inlineHelpText>On Deposit Payment page, note in bottom right the associated amount</inlineHelpText>
    <label>Amount of Failed Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>