unpackaged/main/default/objects/Tax_Ops_Task__c/fields/Failed_Filing_FEINs__c.field-meta.xml
<CustomField>
    <fullName>Failed_Filing_FEINs__c</fullName>
    <label>Failed Filing FEINs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>