unpackaged/main/default/objects/Tax_Ops_Task__c/fields/FEIN_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>FEIN_Account_Number__c</fullName>
    <label>FEIN/Account Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FEIN</fullName>
                <default>true</default>
                <label>FEIN</label>
            </value>
            <value>
                <fullName>Account Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>