unpackaged/main/default/objects/Tax_Ops_Task__c/fields/Filing_Method__c.field-meta.xml
<CustomField>
    <fullName>Filing_Method__c</fullName>
    <label>Filing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Filing_Method</valueSetName>
    </valueSet>
</CustomField>