unpackaged/main/default/objects/Tax_Ops_Task__c/fields/Form_Code__c.field-meta.xml
<CustomField>
    <fullName>Form_Code__c</fullName>
    <label>Form Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>