unpackaged/main/default/objects/Tax_Ops_Task__c/fields/Payment_estimate__c.field-meta.xml
<CustomField>
    <fullName>Payment_estimate__c</fullName>
    <label>Payment Estimate For Tax Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>