unpackaged/main/default/objects/Tax_Ops_Task__c/fields/Payments_Completed__c.field-meta.xml
<CustomField>
    <fullName>Payments_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payments Completed</label>
    <type>Checkbox</type>
</CustomField>