unpackaged/main/default/objects/Tax_Ops_Task__c/fields/Payments_Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Payments_Handle_Time__c</fullName>
    <label>Payments Handle Time</label>
    <summarizedField>Tax_Ops_Task_Log__c.Duration_In_Minutes__c</summarizedField>
    <summaryFilterItems>
        <field>Tax_Ops_Task_Log__c.Process_Step__c</field>
        <operation>equals</operation>
        <value>Payments</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Tax_Ops_Task_Log__c.From_Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>Tax_Ops_Task_Log__c.Tax_Ops_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>