unpackaged/main/default/objects/Tax_Ops_Task__c/fields/Process_Step__c.field-meta.xml
<CustomField>
    <fullName>Process_Step__c</fullName>
    <label>Process Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Process_Step</valueSetName>
    </valueSet>
</CustomField>