unpackaged/main/default/objects/Tax_Ops_Task__c/fields/Skip_Save__c.field-meta.xml
<CustomField>
    <fullName>Skip_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is used to skip &quot;Save&quot; method on click of &quot;Update Problem Companies&quot; button present on &quot;Tax Ops Task&quot; detail page.</description>
    <label>Skip Save</label>
    <type>Checkbox</type>
</CustomField>