unpackaged/main/default/objects/Tax_Ops_Task__c/fields/Total_Count_of_Returns__c.field-meta.xml
<CustomField>
    <fullName>Total_Count_of_Returns__c</fullName>
    <label>Total Count of Returns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>