unpackaged/main/default/objects/Tax_Ops_Task__c/fields/Tracked_check_in_Panda__c.field-meta.xml
<CustomField>
    <fullName>Tracked_check_in_Panda__c</fullName>
    <inlineHelpText>Confirm that you tracked your checks in Panda. https://app.gusto.com/panda/mastertax_check_tracker</inlineHelpText>
    <label>Tracked check(s) in Panda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>