unpackaged/main/default/objects/Tax_Ops_Task__c/recordTypes/Quarter_End.recordType-meta.xml
<RecordType>
    <fullName>Quarter_End</fullName>
    <active>true</active>
    <label>Quarter End</label>
</RecordType>